surge: 3 kategorie zpevniku

--- a/index_template.html
+++ b/index_template.html
@@ -524,15 +524,9 @@
 
 <p>Zpěvník Technické přestávky (<a href="http://www.technicka-prestavka.cz">http://www.technicka-prestavka.cz</a>)</p>
 
-<h3>
-<a id="zpěvník-ke-stažení" class="anchor" href="#zp%C4%9Bvn%C3%ADk-ke-sta%C5%BEen%C3%AD" aria-hidden="true"><span class="octicon octicon-link"></span></a>Zpěvník ke stažení</h3>
-
-<p>Vygenerované zpěvník můžete stáhnout z těchto odkazů:</p>
-
 ##zpevniky##
 
-<h3>
-<a id="vygenerování-zpěvníku--tvorba-vlastního-zpěvníku" class="anchor" href="#vygenerov%C3%A1n%C3%AD-zp%C4%9Bvn%C3%ADku--tvorba-vlastn%C3%ADho-zp%C4%9Bvn%C3%ADku" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vygenerování zpěvníku / tvorba vlastního zpěvníku</h3>
+<h3>Vygenerování zpěvníku / tvorba vlastního zpěvníku</h3>
 
 <p>Informace najdete na <a href="http://github.com/karel-brinda/tp-zpevnik/">http://github.com/karel-brinda/tp-zpevnik/</a></p>
 			</section>
@@ -542,7 +536,6 @@
 		<div id="footer_wrap" class="outer">
 			<footer class="inner">
 				<p class="copyright">TP zpěvník maintained by <a href="https://github.com/karel-brinda">karel-brinda</a></p>
-				<p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
 			</footer>
 		</div>
 
