[surge] Sablona pro novy zpevnik

--- a/index_template.html
+++ b/index_template.html
@@ -507,7 +507,7 @@
 					<a id="forkme_banner" href="https://github.com/karel-brinda/tp-zpevnik">View on GitHub</a>
 
 					<h1 id="project_title">TP zpěvník</h1>
-					<h2 id="project_tagline"></h2>
+					<h2 id="project_tagline">Zpěvník <a href="http://www.technicka-prestavka.cz">Technické přestávky</a></h2>
 
 						<section id="downloads">
 							<a class="zip_download_link" href="https://github.com/karel-brinda/tp-zpevnik/zipball/master">Download this project as a .zip file</a>
@@ -519,16 +519,16 @@
 		<!-- MAIN CONTENT -->
 		<div id="main_content_wrap" class="outer">
 			<section id="main_content" class="inner">
-				<h1>
-<a id="tp-zpěvník" class="anchor" href="#tp-zp%C4%9Bvn%C3%ADk" aria-hidden="true"><span class="octicon octicon-link"></span></a>TP zpěvník</h1>
+				<!-- <h1>TP zpěvník</h1> -->
 
-<p>Zpěvník Technické přestávky (<a href="http://www.technicka-prestavka.cz">http://www.technicka-prestavka.cz</a>)</p>
+<p>
+	Na této stránce se nachází automaticky vygenerované zpěvníky z aktuálních zdrojových kódů.
+	Informace o tom, jak přidat vlastní zpěvník, najdete v <a href="http://github.com/karel-brinda/tp-zpevnik/">repozitáři TP zpěvníku</a>. Nejjednodušší je vyjít ze <a href="Snakefile.sablona">šablony</a> a odstranit komentář <code>#</code> u písní, které chcete ve zpěvníku mít.
+</p>
 
 ##zpevniky##
 
-<h3>Vygenerování zpěvníku / tvorba vlastního zpěvníku</h3>
 
-<p>Informace najdete na <a href="http://github.com/karel-brinda/tp-zpevnik/">http://github.com/karel-brinda/tp-zpevnik/</a></p>
 			</section>
 		</div>
 
